# astrox-python

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  gmat-validation-image.yml  openapi-drift.yml  openapi-fixtures.yml  openapi-refresh.yml  publish.yml  sdk-health.yml
astrox/: __init__.py  _http.py  _models.py  _samples.py  access.py  astrogator.py  conjunction_analysis.py  coverage.py  entities.py  exceptions.py  landing_zone.py  lighting.py  models.py  orbit_convert.py  orbit_system.py  orbit_wizard.py  orbits.py  propagator.py  rocket.py  terrain.py
astrox/components/: __init__.py  _axes.py  _common.py  _constraints.py  _objects.py  _positions.py  _rotations.py  _sensors.py  _vgt.py
astrox/coverage/: __init__.py  _fom.py  coverage_time.py  number_of_assets.py  response_time.py  revisit_time.py  simple_coverage.py
docs/: automated-workflows.md  openapi-drift-decision-tree.md  sdk-principles.md  test-principles.md
docs/sdk/: access.md  components.md  coverage.md  entities.md  lighting.md  orbits.md  propagator.md  rocket.md
examples/: manifest.toml
examples/01_propagation/: README.md  ballistic_apogee_alt.py  ballistic_delta_v.py  ballistic_min_ecc.py  ballistic_time_of_flight.py  batch_propagation.py  batch_propagators.py  hpop.py  hpop_cartesian.py  hpop_classical.py  hpop_icrf.py  hpop_inertial.py  hpop_j2000.py  j2_batch.py  j2_classical.py  pr02_reference_slice.py  propagator_reference.py  sgp4_batch.py  sgp4_propagation.py  sgp4_tle.py  simple_ascent.py  two_body_batch.py  two_body_cartesian.py  two_body_classical.py
examples/02_coverage/: README.md  basic_coverage.py  coverage_statistics.py  fom_calculations.py  fom_coverage_time_grid_point.py  fom_number_of_assets_grid_point.py  fom_number_of_assets_grid_stats.py  fom_response_time_grid_point.py  fom_response_time_grid_point_at_time.py  fom_revisit_time_grid_point.py  fom_revisit_time_grid_stats_over_time.py  fom_simple_coverage_grid_point.py  fom_simple_coverage_grid_stats_over_time.py
examples/02_orbits/: README.md  conversions.py  lambert_delta_v.py  orbit_system.py  wizards.py
examples/03_access/: README.md
examples/03_lighting/: README.md  lighting.py
examples/04_access/: README.md  chain.py  compute.py  constraints.py  custom_axes.py  sensor_pointing.py
examples/04_orbit_design/: coordinate_conversions.py  geo_orbit.py  kepler_to_lla.py  kozai_izsak.py  lambert_transfer.py  molniya_orbit.py  sso_orbit.py  walker_constellation.py  walker_custom.py  walker_delta.py  walker_star.py
examples/05_collision/: close_approach_v3_focused.py  close_approach_v3_high_sensitivity.py  close_approach_v3_tle.py  close_approach_v4_czml.py  debris_breakup_default.py  debris_breakup_nasa.py  debris_breakup_simple.py  lifetime_calculation.py  tle_operations.py
examples/05_rocket/: README.md  landing_zone.py
examples/06_coverage/: README.md  compute.py  fom.py  grid_points.py  reports.py
openapi/: README.md  astrox.openapi.yaml
scripts/: analyze_model_depth.py  check_openapi_drift.py  discover_endpoint_branches.py  fetch_openapi.py  generate_models.py  live_smoke.py  refresh_live_snapshots.py  run_examples.py
tests/: README.md  conftest.py  test_client.py  test_generate_models.py  test_models.py  test_openapi_fixtures.py  test_propagator_ballistic.py  test_propagator_j2_two_body.py  test_propagator_public_contract.py  test_sdk_pr02_documentation.py  test_sdk_pr02_public_contract.py
(+325 files in other folders)
