[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "astrox-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "numpy>=1.24.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.9",
    "brahe>=1.6.0",
    "skyfield>=1.54",
    "hatchling>=1.30.1",
    "lamberthub>=1.0.0",
    "orekit-jpype[jdk4py]>=13.1.5.0",
    "geographiclib>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["astrox"]

[tool.pytest.ini_options]
markers = [
    "calibration: nonblocking live investigations that document unresolved external-tool mismatches",
]
