[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "astrox-python"
version = "0.1.0"
description = "Python SDK for the ASTROX Web API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mtrya", email = "erchanmion20@outlook.com" },
]
keywords = [
    "astrox",
    "sdk",
    "astrodynamics",
    "orbit",
    "propagation",
    "space",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.34.2",
]

[project.urls]
Homepage = "https://github.com/Mtrya/astrox-python"
Repository = "https://github.com/Mtrya/astrox-python.git"
Issues = "https://github.com/Mtrya/astrox-python/issues"
Documentation = "https://github.com/Mtrya/astrox-python/tree/main/docs"

[dependency-groups]
dev = [
    "numpy>=1.24.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.9",
    "brahe>=1.6.0",
    "skyfield>=1.54",
    "hatchling>=1.30.1",
    "lamberthub>=1.0.0",
    "orekit-jpype[jdk4py]>=13.1.5.0",
    "geographiclib>=2.1",
    "astropy>=6.1.7",
    "spiceypy>=8.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["astrox"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.git",
    "/.github",
    "/.venv",
    "/.pytest_cache",
    "/.ruff_cache",
    "/build",
    "/dist",
    "/vendor",
    "/wheels",
    "/roadmap",
    "/scripts",
    "/openapi",
]

[tool.pytest.ini_options]
markers = [
    "calibration: nonblocking live investigations that document unresolved external-tool mismatches",
]
